@@ -119,8 +119,18 @@ typedef enum {
 typedef enum {
   MBNG_EVENT_META_TYPE_UNDEFINED = 0,
   MBNG_EVENT_META_TYPE_SET_BANK,
-  MBNG_EVENT_META_TYPE_INC_BANK,
   MBNG_EVENT_META_TYPE_DEC_BANK,
+  MBNG_EVENT_META_TYPE_INC_BANK,
+
+  MBNG_EVENT_META_TYPE_ENC_FAST,
+
+  MBNG_EVENT_META_TYPE_SCS_ENC,
+  MBNG_EVENT_META_TYPE_SCS_MENU,
+  MBNG_EVENT_META_TYPE_SCS_SOFT1,
+  MBNG_EVENT_META_TYPE_SCS_SOFT2,
+  MBNG_EVENT_META_TYPE_SCS_SOFT3,
+  MBNG_EVENT_META_TYPE_SCS_SOFT4,
+  MBNG_EVENT_META_TYPE_SCS_SHIFT,
 } mbng_event_meta_type_t;
 
 
